features content added

--- a/styles/architect.css
+++ b/styles/architect.css
@@ -48,4 +48,47 @@ nav li a{
     font-size: 16px;
     font-weight: 400;
 }
-        
+.btn-pri{
+    border-radius: 8px;
+background: #FF900E;
+padding: 20px 25px;
+color: #FFFFFF;
+font-weight: 600;  
+font-size: 20px;
+border: 0;
+cursor: pointer;
+}
+ .banner img{
+    width: 100%;
+    margin-top: 20px;
+ }       
+ main{
+    max-width: 1440px;
+    margin: 0 auto;
+ }
+ /* teams styles */
+.team-container{
+    display: flex;
+    align-items: center;
+} 
+.team-img{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+.team-content{
+    padding-left: 70px;
+    padding-right: 70px;
+}
+.team-title{
+    font-size: 45px;
+}
+.Quick-list{
+  color: #727272;  
+  font-weight: 500;
+
+}
+.Features{
+   color: #FF900E;
+   font-weight: 700;
+}
